--- a/app.json
+++ b/app.json
@@ -7,10 +7,10 @@
     "env": {
         "UUID": {
             "description": "V2Ray UUID",
-            "value": "08f31210-34e6-4eff-be02-d6c2212117fa"
+            "value": "4ef3482a-994f-4901-b683-12c372dcbccb"
         }
     },
-    "website": "https://github.com/jone354df465/v2ray-heroku2",
-    "repository": "https://github.com/jone354df465/v2ray-heroku2",
+    "website": "https://github.com/Watmaln/Make-20-ID",
+    "repository": "https://github.com/Watmaln/Make-20-ID",
     "stack": "container"
 }
