--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
             "value": "4ef3482a-994f-4901-b683-12c372dcbccb"
         }
     },
-    "website": "https://github.com/Watmaln/Make-20-ID",
-    "repository": "https://github.com/Watmaln/Make-20-ID",
+    "website": "https://github.com/Watmaln/v2Ray121",
+    "repository": "https://github.com/Watmaln/v2Ray121",
     "stack": "container"
 }
